--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@docthor/cli",
+  "name": "@docthor/core",
   "version": "0.0.1",
   "private": true,
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "bin": "./bin/cmd",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
