--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "description": "",
-  "main": "dist/index.js",
+  "main": "./lib/index.js",
   "bin": "./bin/cmd",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,7 +12,6 @@
   "license": "ISC",
   "dependencies": {
     "better-console": "^1.0.1",
-    "commander": "^7.1.0",
     "fs-extra": "^4.0.3",
     "github-slugger": "^1.2.0",
     "json-beautify": "^1.0.1",
