--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,7 +6,9 @@
   "main": "./lib/index.js",
   "bin": "./bin/cmd",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --recursive",
+    "clean": "rm .docthorrc.js && rm -rf template && rm -rf markdown",
+    "clean:all": "npm run clean && rm -rf docs"
   },
   "author": "LBVO <lbvo@tdc.dk>",
   "license": "ISC",
@@ -29,5 +31,9 @@
     "remark": "^10.0.0",
     "remark-html": "^8.0.0",
     "remark-rehype": "^3.0.1"
+  },
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "mocha": "^9.0.3"
   }
 }
